--- a/deemix-bambanah/config.json
+++ b/deemix-bambanah/config.json
@@ -16,6 +16,7 @@
       "DEEMIX_SERVER_PORT": "6585",
       "DEEMIX_DATA_DIR": "/homeassistant/deemix",
       "DEEMIX_MUSIC_DIR": "/share/Pharaoh/Musiques",
+      "DEEMIX_SINGLE_USER": "false",
       "PGID": "0",
       "PUID": "0"
     },
@@ -34,6 +35,7 @@
       "DEEMIX_SERVER_PORT": "6585",
       "DEEMIX_DATA_DIR": "/homeassistant/deemix",
       "DEEMIX_MUSIC_DIR": "/share/Pharaoh/Musiques",
+      "DEEMIX_SINGLE_USER": false,
       "PGID": 0,
       "PUID": 0
     },
@@ -48,12 +50,13 @@
       "DEEMIX_SERVER_PORT": "int?",
       "DEEMIX_DATA_DIR": "str?",
       "DEEMIX_MUSIC_DIR": "str?",
+      "DEEMIX_SINGLE_USER": "bool",
       "PGID": "int?",
       "PUID": "int?"
     },
     "slug": "deemix-bambanah",
     "startup": "application",
     "url": "https://github.com/lburais/hassio-addons/tree/master/deemix-bambanah",
-    "version": "1.0.0e",
+    "version": "1.0.0f",
     "webui": "http://[HOST]:[PORT:6595]"
   }
