--- a/deemix-bambanah/config.json
+++ b/deemix-bambanah/config.json
@@ -13,10 +13,8 @@
     "description": "Deezer downloader by Bambanah",
     "devices": [],
     "environment": {
-      "DEEMIX_SERVER_PORT": "6595",
       "DEEMIX_DATA_DIR": "/homeassistant/deemix",
       "DEEMIX_MUSIC_DIR": "/share/Pharaoh/Musiques",
-      "DEEMIX_SINGLE_USER": "false",
       "PGID": "0",
       "PUID": "0"
     },
@@ -32,7 +30,6 @@
     ],
     "name": "Deemix by Bambanah",
     "options": {
-      "DEEMIX_SERVER_PORT": "6595",
       "DEEMIX_DATA_DIR": "/homeassistant/deemix",
       "DEEMIX_MUSIC_DIR": "/share/Pharaoh/Musiques",
       "DEEMIX_SINGLE_USER": false,
@@ -47,7 +44,6 @@
       "6595/tcp": "Web interface"
     },
     "schema": {
-      "DEEMIX_SERVER_PORT": "int?",
       "DEEMIX_DATA_DIR": "str?",
       "DEEMIX_MUSIC_DIR": "str?",
       "DEEMIX_SINGLE_USER": "bool",
@@ -57,6 +53,6 @@
     "slug": "deemix-bambanah",
     "startup": "application",
     "url": "https://github.com/lburais/hassio-addons/tree/master/deemix-bambanah",
-    "version": "1.0.0f",
+    "version": "1.0.0g",
     "webui": "http://[HOST]:[PORT:6595]"
   }
