--- a/deemix-bambanah/config.json
+++ b/deemix-bambanah/config.json
@@ -30,9 +30,9 @@
     ],
     "name": "Deemix by Bambanah",
     "options": {
+      "DEEMIX_SINGLE_USER": false,
       "DEEMIX_DATA_DIR": "/homeassistant/deemix",
       "DEEMIX_MUSIC_DIR": "/share/Pharaoh/Musiques",
-      "DEEMIX_SINGLE_USER": false,
       "PGID": 0,
       "PUID": 0
     },
@@ -53,6 +53,6 @@
     "slug": "deemix-bambanah",
     "startup": "application",
     "url": "https://github.com/lburais/hassio-addons/tree/master/deemix-bambanah",
-    "version": "1.0.0g",
+    "version": "1.0.0h",
     "webui": "http://[HOST]:[PORT:6595]"
   }
