--- a/deemix-bambanah/config.json
+++ b/deemix-bambanah/config.json
@@ -12,6 +12,13 @@
     "boot": "auto",
     "description": "Deezer downloader by Bambanah",
     "devices": [],
+    "environment": {
+      "DEEMIX_SINGLE_USER": false,
+      "DEEMIX_DATA_DIR": "/homeassistant/addons_config/deemix",
+      "DEEMIX_MUSIC_DIR": "/share/Pharaoh/Musiques",
+      "PGID": 0,
+      "PUID": 0
+    },
     "host_network": false,
     "homeassistant_api": true,
     "ingress": true,
