--- a/deemix-bambanah/config.json
+++ b/deemix-bambanah/config.json
@@ -16,8 +16,8 @@
       "DEEMIX_SINGLE_USER": false,
       "DEEMIX_DATA_DIR": "/homeassistant/addons_config/deemix",
       "DEEMIX_MUSIC_DIR": "/share/Pharaoh/Musiques",
-      "PGID": 0,
-      "PUID": 0
+      "PGID": "0",
+      "PUID": "0"
     },
     "host_network": false,
     "homeassistant_api": true,
